src/scss/06-components/navigation/_header-top-navigation.scss
$-header-top-padding: 14px; // Specific pixel size for top and bottom padding from layout.

.header-top {
  display: none; // Hide on mobile

  @include breakpoint($breakpoint-l) {
    align-items: center;
    background-color: $color-black-5;
    display: flex;
    justify-content: flex-end;
    padding: 0 $spacing-double;
  }

  .menu {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .menu__item + .menu__item {
    margin-inline-start: $spacing-quarter; // Visual space between menu items is still $spacing, but we want a little of the space to be inside the padding. 6px + $spacing-quarter + 6px = 16px
  }

  .menu__link {
    display: inline-block;
    padding-block: $-header-top-padding; // This sets the link clickable area to be big enough for a11y.
    padding-inline: 6px; // Visual space between menu items is still $spacing, but we want a little of the space to be inside the padding. 6px + $spacing-quarter + 6px = 16px
  }

  .menu__item:last-child .menu__link {
    padding-inline-end: 0;
  }

  .link-to-site-frontpage {
    @include navigation-link-defaults;
  }

  .menu__link__text::after {
    --external-icon-move: translate(1px, -1px);

    @media (prefers-reduced-motion) {
      --external-icon-move: scale(1);
    }
  }
}

.frontpage-instance-link__container {
  margin-right: auto;
}

